add tests to the app

--- a/.env
+++ b/.env
@@ -14,12 +14,14 @@ DB_URI="mongodb://127.0.0.1/auth-service"
 PORT=3000
 LOG_LEVEL="info"
 
-SMTP_USER="a3bf3c834faa38"
-SMTP_PASS="1286f47779ea08"
-SMTP_HOST="sandbox.smtp.mailtrap.io"
-SMTP_PORT=2525
+
+# mailtrap/mailgun/brevo SMTP credentials
+# put your SMTP credentials from the email provider you choose
+
+SMTP_USER="your SMTP USER"
+SMTP_PASS="your SMTP PASS"
+SMTP_HOST="your SMTP HOST"
+SMTP_PORT=your SMTP PORT
 SMTP_SECURE=false
+
 SMTP_LOGGER=true
-
-
-# NODE_OPTIONS="--experimental-vm-modules" 
