--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "auth-service",
-  "type": "module",
   "version": "1.0.0",
   "description": "",
   "exports": "./dist/app.js",
   "scripts": {
-    "test": " cross-env NODE_OPTIONS=--experimental-vm-modules jest",
-    "build": "tsc -p .",
-    "prestart": "rimraf dist && tsc -w",
-    "start": "node dist/app.js",
-    "dev": "concurrently \"tsc -w\"  \"nodemon dist/app.js\""
+    "test": "jest",
+    "dev": "ts-node-dev --respawn --transpile-only -r kill-port src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@typegoose/typegoose": "^10.1.1",
     "@types/config": "^3.3.0",
     "@types/express": "^4.17.17",
@@ -29,12 +26,13 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.9.2",
-    "nanoid": "^4.0.1",
+    "nanoid": "^3.3.4",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "pino": "^8.10.0",
     "pino-pretty": "^9.3.0",
     "sinon": "^15.0.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5",
     "zod": "^3.20.6"
   },
@@ -46,6 +44,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "jest": "^29.4.3",
+    "kill-port": "^2.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5"
   }
